--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-dom": "^16.8.4",
     "react-polyfills": "0.0.1",
     "react-router-dom": "^6.3.0",
+    "sweetalert2": "^11.4.29",
     "use-places-autocomplete": "^4.0.0"
   }
 }
